--- a/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
@@ -1485,6 +1485,8 @@
         state: decor_base_OuterClothing_armor_06
         color: "#e48545"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetLvhi
     slot: head
@@ -1552,6 +1554,8 @@
         state: decor_base_OuterClothing_armor_02
         color: "#8f1717"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
       - sprite: _NF/Clothing/OuterClothing/Armor/bulletproof_vest_procedural.rsi
         state: decor_base_OuterClothing_armor_05
         color: "#8f1717"
