--- a/Resources/Prototypes/_NF/ai_factions.yml
+++ b/Resources/Prototypes/_NF/ai_factions.yml
@@ -465,3 +465,15 @@
   - SiliconsExpeditionNF
   - AberrantFleshExpeditionNF
   - ContrabandClothing
+
+- type: npcFaction
+  id: GoblinbaneFaction
+  friendly:
+  - WizFedFaction
+  hostile:
+  - Mouse
+  - Zombie
+  ## Frontier Factions
+  - Felinid
+  - Monkey
+  - Goblin
