Replace inquisitor tiny fans with directionals, fix up some other things

--- a/Resources/Maps/_NF/Shuttles/Nfsd/inquisitor.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/inquisitor.yml
@@ -218,57 +218,75 @@ entities:
       data:
         tiles:
           0,0:
-            0: 61439
+            0: 17503
             1: 4096
           0,-1:
-            0: 65535
-          -1,-1:
-            0: 49151
-            1: 16384
+            0: 65364
           -1,0:
-            0: 4095
+            0: 251
           0,1:
-            0: 1791
-            1: 2304
+            0: 102
+            2: 2304
           1,0:
-            0: 61183
+            0: 50279
             1: 256
           1,1:
-            0: 2254
-            1: 1056
-          2,0:
-            0: 28799
-            1: 33152
-          2,1:
-            0: 2047
-            1: 2048
-          0,-2:
-            1: 4105
-            0: 61430
-          1,-2:
-            1: 36
-            0: 61128
+            2: 1057
+            0: 140
           1,-1:
+            0: 63332
             1: 1
-            0: 65534
-          2,-2:
-            0: 32759
-            1: 32776
+          2,0:
+            0: 7
+            1: 256
+            2: 33920
+          2,1:
+            0: 119
+            2: 2048
           2,-1:
-            1: 129
-            0: 65392
+            0: 30464
+            1: 1
+            2: 132
+          0,-2:
+            2: 9
+            0: 18016
+            1: 4096
+          -1,-1:
+            0: 7152
+            1: 16384
+          1,-2:
+            2: 292
+            0: 52352
+          2,-2:
+            0: 1904
+            2: 32776
           -2,-1:
-            1: 8
-            0: 34944
+            2: 8
+            0: 2048
           -2,0:
-            0: 136
-            1: 2048
+            0: 8
+            2: 2048
         uniqueMixes:
         - volume: 2500
           temperature: 293.15
           moles:
           - 21.824879
           - 82.10312
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          immutable: True
+          moles:
+          - 0
+          - 0
           - 0
           - 0
           - 0
@@ -388,16 +406,6 @@ entities:
       parent: 2
     - type: Physics
       canCollide: False
-- proto: AirCanister
-  entities:
-  - uid: 25
-    components:
-    - type: Transform
-      anchored: True
-      pos: 10.5,4.5
-      parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: AirlockGlassShuttle
   entities:
   - uid: 15
@@ -463,25 +471,24 @@ entities:
       startingCharge: 0
     - type: Apc
       hasAccess: True
-      lastChargeState: Charging
   - uid: 31
     components:
     - type: Transform
       pos: 8.5,1.5
       parent: 1
-- proto: AtmosDeviceFanTiny
+- proto: AtmosDeviceFanDirectional
   entities:
-  - uid: 32
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -4.5,-1.5
-      parent: 1
-  - uid: 33
+  - uid: 25
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -4.5,0.5
+      parent: 1
+  - uid: 29
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -4.5,-1.5
       parent: 1
 - proto: AtmosFixBlockerMarker
   entities:
@@ -688,11 +695,6 @@ entities:
     - type: Transform
       pos: -2.5,1.5
       parent: 1
-  - uid: 45
-    components:
-    - type: Transform
-      pos: -2.5,1.5
-      parent: 1
   - uid: 46
     components:
     - type: Transform
@@ -804,16 +806,6 @@ entities:
     - type: Transform
       pos: -1.5,-2.5
       parent: 1
-  - uid: 67
-    components:
-    - type: Transform
-      pos: -2.5,-2.5
-      parent: 1
-  - uid: 68
-    components:
-    - type: Transform
-      pos: -1.5,-2.5
-      parent: 1
   - uid: 69
     components:
     - type: Transform
@@ -909,11 +901,6 @@ entities:
     - type: Transform
       pos: 2.5,2.5
       parent: 1
-  - uid: 88
-    components:
-    - type: Transform
-      pos: 2.5,3.5
-      parent: 1
   - uid: 89
     components:
     - type: Transform
@@ -958,11 +945,6 @@ entities:
     - type: Transform
       pos: 7.5,5.5
       parent: 1
-  - uid: 106
-    components:
-    - type: Transform
-      pos: 9.5,5.5
-      parent: 1
 - proto: CableMV
   entities:
   - uid: 112
@@ -985,11 +967,6 @@ entities:
     - type: Transform
       pos: 7.5,2.5
       parent: 1
-  - uid: 117
-    components:
-    - type: Transform
-      pos: 9.5,4.5
-      parent: 1
   - uid: 118
     components:
     - type: Transform
@@ -1000,16 +977,6 @@ entities:
     - type: Transform
       pos: 9.5,6.5
       parent: 1
-  - uid: 120
-    components:
-    - type: Transform
-      pos: 9.5,4.5
-      parent: 1
-  - uid: 122
-    components:
-    - type: Transform
-      pos: 9.5,4.5
-      parent: 1
   - uid: 123
     components:
     - type: Transform
@@ -1019,6 +986,11 @@ entities:
     components:
     - type: Transform
       pos: 7.5,4.5
+      parent: 1
+  - uid: 264
+    components:
+    - type: Transform
+      pos: 8.5,5.5
       parent: 1
 - proto: CapacitorStockPart
   entities:
@@ -1036,15 +1008,22 @@ entities:
       canCollide: False
 - proto: Catwalk
   entities:
+  - uid: 45
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 10.5,4.5
+      parent: 1
+  - uid: 67
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 9.5,5.5
+      parent: 1
   - uid: 125
     components:
     - type: Transform
       pos: 7.5,5.5
-      parent: 1
-  - uid: 126
-    components:
-    - type: Transform
-      pos: 9.5,5.5
       parent: 1
   - uid: 127
     components:
@@ -1055,11 +1034,6 @@ entities:
     components:
     - type: Transform
       pos: 8.5,5.5
-      parent: 1
-  - uid: 129
-    components:
-    - type: Transform
-      pos: 10.5,4.5
       parent: 1
 - proto: CellRechargerCircuitboard
   entities:
@@ -1082,46 +1056,6 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 9.5,-5.5
-      parent: 1
-- proto: ClosetWall
-  entities:
-  - uid: 132
-    components:
-    - type: Transform
-      pos: 6.5,5.5
-      parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.14957
-        moles:
-        - 1.7459903
-        - 6.568249
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-    - type: ContainerContainer
-      containers:
-        entity_storage: !type:Container
-          showEnts: False
-          occludes: True
-          ents:
-          - 133
-          - 134
-- proto: ComputerPowerMonitoring
-  entities:
-  - uid: 29
-    components:
-    - type: Transform
-      pos: 8.5,5.5
       parent: 1
 - proto: ComputerTabletopCrewMonitoring
   entities:
@@ -1345,6 +1279,20 @@ entities:
     - type: Transform
       pos: 6.5,2.5
       parent: 1
+- proto: GasMixerOn
+  entities:
+  - uid: 102
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 9.5,4.5
+      parent: 1
+    - type: GasMixer
+      inletTwoConcentration: 0.78
+      inletOneConcentration: 0.22
+      enabled: True
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
 - proto: GasPassiveVent
   entities:
   - uid: 165
@@ -1430,12 +1378,14 @@ entities:
       color: '#0055CCFF'
 - proto: GasPipeStraight
   entities:
-  - uid: 102
+  - uid: 106
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
-      pos: 9.5,4.5
+      pos: 8.5,4.5
       parent: 1
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
   - uid: 175
     components:
     - type: Transform
@@ -1786,19 +1736,18 @@ entities:
       color: '#990000FF'
 - proto: GasPort
   entities:
-  - uid: 9
+  - uid: 104
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 10.5,4.5
       parent: 1
-- proto: GasPressurePump
-  entities:
+    - type: AtmosPipeColor
+      color: '#0055CCFF'
   - uid: 222
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 8.5,4.5
+      pos: 9.5,5.5
       parent: 1
     - type: AtmosPipeColor
       color: '#0055CCFF'
@@ -2073,15 +2022,6 @@ entities:
     - type: Transform
       pos: -1.5,-0.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
-- proto: LockerNfsdSilverDetectiveFilled
-  entities:
-  - uid: 259
-    components:
-    - type: Transform
-      pos: 8.5,-6.5
-      parent: 1
 - proto: LockerNfsdEvidence
   entities:
   - uid: 260
@@ -2101,6 +2041,40 @@ entities:
     - type: Transform
       pos: 9.5,-1.5
       parent: 1
+- proto: LockerNfsdSilverDetectiveFilled
+  entities:
+  - uid: 259
+    components:
+    - type: Transform
+      pos: 8.5,-6.5
+      parent: 1
+- proto: LockerWallMaterialsFuelPlasmaFilled
+  entities:
+  - uid: 68
+    components:
+    - type: Transform
+      pos: 6.5,5.5
+      parent: 1
+- proto: NitrogenCanister
+  entities:
+  - uid: 9
+    components:
+    - type: Transform
+      anchored: True
+      pos: 9.5,5.5
+      parent: 1
+    - type: Physics
+      bodyType: Static
+- proto: OxygenCanister
+  entities:
+  - uid: 32
+    components:
+    - type: Transform
+      anchored: True
+      pos: 10.5,4.5
+      parent: 1
+    - type: Physics
+      bodyType: Static
 - proto: PortableGeneratorPacmanShuttle
   entities:
   - uid: 99
@@ -2112,48 +2086,6 @@ entities:
       on: False
     - type: Physics
       bodyType: Static
-- proto: PosterContrabandBorgFancy
-  entities:
-  - uid: 263
-    components:
-    - type: Transform
-      pos: -1.5,-3.5
-      parent: 1
-- proto: PosterContrabandDonutCorp
-  entities:
-  - uid: 264
-    components:
-    - type: Transform
-      pos: 3.5,-3.5
-      parent: 1
-- proto: PosterContrabandNuclearDeviceInformational
-  entities:
-  - uid: 265
-    components:
-    - type: Transform
-      pos: 1.5,-7.5
-      parent: 1
-- proto: PosterContrabandWehWatches
-  entities:
-  - uid: 266
-    components:
-    - type: Transform
-      pos: 1.5,6.5
-      parent: 1
-- proto: PosterLegit12Gauge
-  entities:
-  - uid: 267
-    components:
-    - type: Transform
-      pos: -1.5,2.5
-      parent: 1
-- proto: PosterLegitCarbonDioxide
-  entities:
-  - uid: 268
-    components:
-    - type: Transform
-      pos: 10.5,1.5
-      parent: 1
 - proto: PosterLegitEnlist
   entities:
   - uid: 269
@@ -2167,27 +2099,6 @@ entities:
     components:
     - type: Transform
       pos: 7.5,-7.5
-      parent: 1
-- proto: PosterLegitGetYourLEGS
-  entities:
-  - uid: 271
-    components:
-    - type: Transform
-      pos: 3.5,2.5
-      parent: 1
-- proto: PosterLegitLoveIan
-  entities:
-  - uid: 272
-    components:
-    - type: Transform
-      pos: 6.5,-6.5
-      parent: 1
-- proto: PosterLegitPeriodicTable
-  entities:
-  - uid: 273
-    components:
-    - type: Transform
-      pos: 10.5,-2.5
       parent: 1
 - proto: PowerCellRecharger
   entities:
@@ -2293,22 +2204,53 @@ entities:
       rot: 3.141592653589793 rad
       pos: 4.5,4.5
       parent: 1
-- proto: SheetPlasma
+- proto: RandomPosterAny
   entities:
+  - uid: 33
+    components:
+    - type: Transform
+      pos: 0.5,2.5
+      parent: 1
+  - uid: 117
+    components:
+    - type: Transform
+      pos: 0.5,-3.5
+      parent: 1
+  - uid: 120
+    components:
+    - type: Transform
+      pos: 1.5,-7.5
+      parent: 1
+  - uid: 122
+    components:
+    - type: Transform
+      pos: 3.5,-3.5
+      parent: 1
+  - uid: 126
+    components:
+    - type: Transform
+      pos: 1.5,6.5
+      parent: 1
+  - uid: 129
+    components:
+    - type: Transform
+      pos: 5.5,-5.5
+      parent: 1
+  - uid: 132
+    components:
+    - type: Transform
+      pos: 3.5,2.5
+      parent: 1
   - uid: 133
     components:
     - type: Transform
-      parent: 132
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
+      pos: 10.5,1.5
+      parent: 1
   - uid: 134
     components:
     - type: Transform
-      parent: 132
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
+      pos: 10.5,-2.5
+      parent: 1
 - proto: ShuttersNormalOpen
   entities:
   - uid: 140
@@ -2327,9 +2269,6 @@ entities:
     - type: DeviceNetwork
       address: 4967-8FDB
       receiveFrequency: 1280
-    - type: DeviceLinkSink
-      links:
-      - 304
   - uid: 142
     components:
     - type: Transform
@@ -2346,9 +2285,6 @@ entities:
     - type: DeviceNetwork
       address: 7927-5FE5
       receiveFrequency: 1280
-    - type: DeviceLinkSink
-      links:
-      - 304
   - uid: 144
     components:
     - type: Transform
@@ -2365,9 +2301,6 @@ entities:
     - type: DeviceNetwork
       address: 2F67-D620
       receiveFrequency: 1280
-    - type: DeviceLinkSink
-      links:
-      - 304
 - proto: ShuttleWindow
   entities:
   - uid: 282
@@ -2588,10 +2521,10 @@ entities:
       parent: 1
 - proto: SubstationBasic
   entities:
-  - uid: 104
+  - uid: 88
     components:
     - type: Transform
-      pos: 9.5,5.5
+      pos: 8.5,5.5
       parent: 1
 - proto: SuitStorageDeputy
   entities:
@@ -2613,16 +2546,12 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 1.5,2.5
       parent: 1
-    - type: Physics
-      canCollide: False
   - uid: 322
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 1.5,-3.5
       parent: 1
-    - type: Physics
-      canCollide: False
 - proto: TableWood
   entities:
   - uid: 323
@@ -2680,47 +2609,35 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 8.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 332
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 8.5,2.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 333
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 0.5,3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 334
     components:
     - type: Transform
       pos: 4.5,2.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 335
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 0.5,-4.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 336
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 4.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
 - proto: WallShuttle
   entities:
   - uid: 338
@@ -3282,5 +3199,13 @@ entities:
     components:
     - type: Transform
       pos: 2.5,-4.5
+      parent: 1
+- proto: Wrench
+  entities:
+  - uid: 263
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 8.822146,4.364559
       parent: 1
 ...
