--- a/.github/workflows/update-credits.yml
+++ b/.github/workflows/update-credits.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     # Hey there fork dev! If you like to include your own contributors in this then you can probably just change this to your own repo
     # Do this in dump_github_contributors.ps1 too into your own repo
-    if: github.repository == 'new-frontiers-14/frontier-station-14' # Frontier: disabled until we can get a meaningful list of frontier-specific contributors
+    if: github.repository == 'new-frontiers-14/frontier-station-14' # Frontier: space-wizards/space-station-14<new-frontiers-14/frontier-station-14
 
     steps:
       - uses: actions/checkout@v3.6.0
