ATC email consistency

--- a/.github/workflows/update-credits.yml
+++ b/.github/workflows/update-credits.yml
@@ -38,4 +38,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update Credits
-          commit_author: FrontierATC <github@frontierstation14.com>
+          commit_author: FrontierATC <zuuswa@gmail.com>
