--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -562,6 +562,8 @@
   - type: SliceableFood
     count: 3
     slice: FoodButterSlice
+  - type: Extractable #frontier
+    grindableSolutionName: food #frontier
 
 - type: entity
   name: butter slice
@@ -581,6 +583,8 @@
   - type: Tag
     tags:
     - Slice
+  - type: Extractable #frontier
+    grindableSolutionName: food #frontier
 
 - type: entity
   name: stick of cannabis butter
