goblinbane, faction clothes

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -201,7 +201,7 @@
   - type: Appearance
 
 - type: entity
-  parent: ClothingBeltStorageBase
+  parent: [ JanitorClothes, ClothingBeltStorageBase ] # Frontier: added JanitorClothes
   id: ClothingBeltJanitor
   name: janibelt
   description: A belt used to hold most janitorial supplies.
