--- a/Resources/Prototypes/_NF/ai_factions.yml
+++ b/Resources/Prototypes/_NF/ai_factions.yml
@@ -24,6 +24,7 @@
   - SiliconsExpeditionNF
   - AberrantFleshExpeditionNF
   - ContrabandClothing
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: Dwarf
@@ -77,6 +78,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: WizFedFaction
@@ -107,6 +109,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  #- GoblinbaneFaction
 
 - type: npcFaction
   id: BloodCultNF
@@ -137,6 +140,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: PirateNF
@@ -167,6 +171,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: ArtifactConstruct
@@ -197,6 +202,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: StreetGangNF
@@ -227,6 +233,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: DinosaursNF
@@ -257,6 +264,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: ExplorersExpeditionNF
@@ -287,6 +295,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: MercenariesExpeditionNF
@@ -317,6 +326,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: SiliconsExpeditionNF
@@ -347,6 +357,7 @@
   - AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: AberrantFleshExpeditionNF
@@ -377,6 +388,7 @@
   #- AberrantFleshExpeditionNF
   - ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: ContrabandClothing
@@ -407,6 +419,7 @@
   - AberrantFleshExpeditionNF
   #- ContrabandClothing
   - ContrabandDetection
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: ContrabandDetection
@@ -436,6 +449,7 @@
   - SiliconsExpeditionNF
   - AberrantFleshExpeditionNF
   - ContrabandClothing
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: HostileUniversally
@@ -465,15 +479,26 @@
   - SiliconsExpeditionNF
   - AberrantFleshExpeditionNF
   - ContrabandClothing
+  - GoblinbaneFaction
 
 - type: npcFaction
   id: GoblinbaneFaction
   friendly:
   - WizFedFaction
+  - JanitorClothes
   hostile:
+  - PetsNT
+  - Pibble
   - Mouse
   - Zombie
   ## Frontier Factions
   - Felinid
   - Monkey
   - Goblin
+  - ChaplainClothes
+
+- type: npcFaction
+  id: JanitorClothes
+
+- type: npcFaction
+  id: ChaplainClothes
