toilet spawners in expeds and POIs

--- a/Resources/Maps/_NF/Dungeon/cave_factory.yml
+++ b/Resources/Maps/_NF/Dungeon/cave_factory.yml
@@ -13674,7 +13674,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 12.5,43.5
       parent: 1
-- proto: ToiletEmpty
+- proto: ToiletMemeSpawner
   entities:
   - uid: 927
     components:
