--- a/Resources/Maps/_NF/Dungeon/haunted.yml
+++ b/Resources/Maps/_NF/Dungeon/haunted.yml
@@ -3013,7 +3013,7 @@ entities:
     - type: Transform
       pos: 36.5,31.5
       parent: 1653
-- proto: ToiletDirtyWater
+- proto: ToiletMemeSpawner
   entities:
   - uid: 406
     components:
