--- a/Resources/Maps/_NF/Dungeon/lava_brig.yml
+++ b/Resources/Maps/_NF/Dungeon/lava_brig.yml
@@ -12154,7 +12154,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 12.5,43.5
       parent: 588
-- proto: ToiletEmpty
+- proto: ToiletMemeSpawner
   entities:
   - uid: 932
     components:
