--- a/Resources/Maps/_NF/Dungeon/salvage_outpost.yml
+++ b/Resources/Maps/_NF/Dungeon/salvage_outpost.yml
@@ -14910,7 +14910,7 @@ entities:
     - type: Transform
       pos: 22.5,28.5
       parent: 1653
-- proto: ToiletDirtyWater
+- proto: ToiletMemeSpawner
   entities:
   - uid: 157
     components:
