--- a/Resources/Maps/_NF/Dungeon/virology_lab.yml
+++ b/Resources/Maps/_NF/Dungeon/virology_lab.yml
@@ -13538,7 +13538,7 @@ entities:
     - type: Transform
       pos: 20.5,24.5
       parent: 1653
-- proto: ToiletDirtyWater
+- proto: ToiletMemeSpawner
   entities:
   - uid: 1924
     components:
@@ -13546,7 +13546,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 52.5,0.5
       parent: 1653
-- proto: ToiletEmpty
+- proto: ToiletMemeSpawner
   entities:
   - uid: 799
     components:
