--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_meme_goblinbane.yml
@@ -40,6 +40,9 @@
   - type: NpcFactionMember
     factions:
     - GoblinbaneFaction
+  - type: FootstepModifier
+    footstepSoundCollection:
+      path: /Audio/_NF/Effects/silence.ogg
   - type: CanMoveInAir
   - type: Fixtures
     fixtures:
@@ -226,6 +229,7 @@
             max: 1
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
+  - type: MeleeWeapon
     soundHit:
       collection: Punch
     angle: 30
