--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -212,8 +212,8 @@
 - type: entity
   parent: ReagentPacketBase
   id: ReagentContainerOliveoil
-  name: olive oil #frontier for consolidating vegetable oils
-  description: Olive oil. From space olives presumably. #frontier
+  name: olive oil # Frontier for consolidating vegetable oils
+  description: Olive oil. From space olives presumably. # Frontier
   components:
   - type: Sprite
     state: oliveoil
@@ -562,8 +562,8 @@
   - type: SliceableFood
     count: 3
     slice: FoodButterSlice
-  - type: Extractable #frontier
-    grindableSolutionName: food #frontier
+  - type: Extractable # Frontier
+    grindableSolutionName: food # Frontier
 
 - type: entity
   name: butter slice
@@ -583,8 +583,8 @@
   - type: Tag
     tags:
     - Slice
-  - type: Extractable #frontier
-    grindableSolutionName: food #frontier
+  - type: Extractable # Frontier
+    grindableSolutionName: food # Frontier
 
 - type: entity
   name: stick of cannabis butter
