revert bank atm slot, update-credits, no NFDev tst

--- a/Resources/Prototypes/_NF/Entities/Structures/atm.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/atm.yml
@@ -36,7 +36,7 @@
   - type: ContainerContainer
     containers:
       board: !type:Container
-      bankATM-cashSlot: !type:ContainerSlot
+      bank-ATM-cashSlot: !type:ContainerSlot
 
 - type: entity
   name: withdraw-only bank ATM
@@ -197,6 +197,6 @@
   - type: ContainerContainer
     containers:
       board: !type:Container
-      stationBankATM-cashSlot: !type:ContainerSlot
+      station-bank-ATM-cashSlot: !type:ContainerSlot
   - type: AccessReader
     access: [["HeadOfPersonnel"], ["HeadOfSecurity"]]
