--- a/Resources/Prototypes/_NF/Entities/Markers/pacified_zone.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/pacified_zone.yml
@@ -17,8 +17,9 @@
       - Brigmedic
       - Cadet
       - Deputy
-      - DetectiveNF
+      - NFDetective
       - SeniorOfficer
+      - PublicAffairsLiaison
       - Sheriff
       - SecurityGuard
       - StationRepresentative
