--- a/Resources/Prototypes/Entities/Objects/Misc/books.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/books.yml
@@ -4,6 +4,9 @@
   id: BookBase
   description: A hardcover book.
   components:
+  - type: PhysicalComposition # Frontier
+    materialComposition: # Frontier
+      Paper: 50 # Frontier
   - type: Sprite
     sprite: Objects/Misc/books.rsi
     layers:
