Remove olive oil comments

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -212,8 +212,8 @@
 - type: entity
   parent: ReagentPacketBase
   id: ReagentContainerOliveoil
-  name: olive oil # Frontier for consolidating vegetable oils
-  description: Olive oil. From space olives presumably. # Frontier
+  name: olive oil
+  description: Olive oil. From space olives presumably.
   components:
   - type: Sprite
     state: oliveoil
