--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Melee/caveman_club.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Melee/caveman_club.yml
@@ -1,11 +1,11 @@
 - type: entity
   name: caveman club
-  parent: [BaseItem, BaseMinorContraband]
+  parent: [BaseItem, BaseC1Contraband]
   id: CavemanClub
   description: It brings forth primal urges, OOK!
   components:
   - type: Sprite
-    sprite: Objects/Weapons/Melee/caveman_club.rsi
+    sprite: _NF/Objects/Weapons/Melee/caveman_club.rsi
     state: icon
   - type: MeleeWeapon
     wideAnimationRotation: -135
@@ -26,3 +26,13 @@
   - type: PhysicalComposition
     materialComposition:
       Wood: 200
+  - type: AddAccentPickup
+    accent: CavemanAccent
+
+- type: entity
+  name: caveman club
+  parent: [CavemanClub]
+  id: CavemanClubCursed
+  suffix: Unremoveable
+  components:
+  - type: Unremoveable
