--- a/Resources/Prototypes/_NF/Accents/word_replacements.yml
+++ b/Resources/Prototypes/_NF/Accents/word_replacements.yml
@@ -859,6 +859,62 @@
     accent-caveman-replaced-75: accent-caveman-replacement-75
     accent-caveman-replaced-76: accent-caveman-replacement-76
     accent-caveman-replaced-77: accent-caveman-replacement-77
+    accent-caveman-replaced-78: accent-caveman-replacement-78
+    accent-caveman-replaced-79: accent-caveman-replacement-79
+    accent-caveman-replaced-80: accent-caveman-replacement-80
+    accent-caveman-replaced-81: accent-caveman-replacement-81
+    accent-caveman-replaced-82: accent-caveman-replacement-82
+    accent-caveman-replaced-83: accent-caveman-replacement-83
+    accent-caveman-replaced-84: accent-caveman-replacement-84
+    accent-caveman-replaced-85: accent-caveman-replacement-85
+    accent-caveman-replaced-86: accent-caveman-replacement-86
+    accent-caveman-replaced-87: accent-caveman-replacement-87
+    accent-caveman-replaced-88: accent-caveman-replacement-88
+    accent-caveman-replaced-89: accent-caveman-replacement-89
+    accent-caveman-replaced-90: accent-caveman-replacement-90
+    accent-caveman-replaced-91: accent-caveman-replacement-91
+    accent-caveman-replaced-92: accent-caveman-replacement-92
+    accent-caveman-replaced-93: accent-caveman-replacement-93
+    accent-caveman-replaced-94: accent-caveman-replacement-94
+    accent-caveman-replaced-95: accent-caveman-replacement-95
+    accent-caveman-replaced-96: accent-caveman-replacement-96
+    accent-caveman-replaced-97: accent-caveman-replacement-97
+    accent-caveman-replaced-98: accent-caveman-replacement-98
+    accent-caveman-replaced-99: accent-caveman-replacement-99
+    accent-caveman-replaced-100: accent-caveman-replacement-100
+    accent-caveman-replaced-101: accent-caveman-replacement-101
+    accent-caveman-replaced-102: accent-caveman-replacement-102
+    accent-caveman-replaced-103: accent-caveman-replacement-103
+    accent-caveman-replaced-104: accent-caveman-replacement-104
+    accent-caveman-replaced-105: accent-caveman-replacement-105
+    accent-caveman-replaced-106: accent-caveman-replacement-106
+    accent-caveman-replaced-107: accent-caveman-replacement-107
+    accent-caveman-replaced-108: accent-caveman-replacement-108
+    accent-caveman-replaced-109: accent-caveman-replacement-109
+    accent-caveman-replaced-110: accent-caveman-replacement-110
+    accent-caveman-replaced-111: accent-caveman-replacement-111
+    accent-caveman-replaced-112: accent-caveman-replacement-112
+    accent-caveman-replaced-113: accent-caveman-replacement-113
+    accent-caveman-replaced-114: accent-caveman-replacement-114
+    accent-caveman-replaced-115: accent-caveman-replacement-115
+    accent-caveman-replaced-116: accent-caveman-replacement-116
+    accent-caveman-replaced-117: accent-caveman-replacement-117
+    accent-caveman-replaced-118: accent-caveman-replacement-118
+    accent-caveman-replaced-119: accent-caveman-replacement-119
+    accent-caveman-replaced-120: accent-caveman-replacement-120
+    accent-caveman-replaced-121: accent-caveman-replacement-121
+    accent-caveman-replaced-122: accent-caveman-replacement-122
+    accent-caveman-replaced-123: accent-caveman-replacement-123
+    accent-caveman-replaced-124: accent-caveman-replacement-124
+    accent-caveman-replaced-125: accent-caveman-replacement-125
+    accent-caveman-replaced-126: accent-caveman-replacement-126
+    accent-caveman-replaced-127: accent-caveman-replacement-127
+    accent-caveman-replaced-128: accent-caveman-replacement-128
+    accent-caveman-replaced-129: accent-caveman-replacement-129
+    accent-caveman-replaced-130: accent-caveman-replacement-130
+    accent-caveman-replaced-131: accent-caveman-replacement-131
+    accent-caveman-replaced-132: accent-caveman-replacement-132
+    accent-caveman-replaced-133: accent-caveman-replacement-133
     # Forbidden words
     accent-caveman-forbidden-0: accent-caveman-forbidden-empty
     accent-caveman-forbidden-1: accent-caveman-forbidden-empty
